tests/ui/missing_intopy.stderr
error[E0277]: the trait bound `Blah: IntoPy<Py<PyAny>>` is not satisfied
 --> tests/ui/missing_intopy.rs:3:1
  |
3 | #[pyo3::pyfunction]
  | ^^^^^^^^^^^^^^^^^^^ the trait `IntoPy<Py<PyAny>>` is not implemented for `Blah`
  |
  = help: the following other types implement trait `IntoPy<T>`:
            <&'a OsString as IntoPy<Py<PyAny>>>
            <&'a Path as IntoPy<Py<PyAny>>>
            <&'a PathBuf as IntoPy<Py<PyAny>>>
            <&'a PyErr as IntoPy<Py<PyAny>>>
            <&'a String as IntoPy<Py<PyAny>>>
            <&'a [u8] as IntoPy<Py<PyAny>>>
            <&'a str as IntoPy<Py<PyAny>>>
            <&'a str as IntoPy<Py<PyString>>>
          and $N others
  = note: required because of the requirements on the impl of `OkWrap<Blah>` for `Blah`
  = note: this error originates in the attribute macro `pyo3::pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
